[create lib/libtest branch] とりあえずmainとlibの切り分けに成功

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,4 +1,9 @@
-add_subdirectory(calc)
-add_subdirectory(render)
-
-add_library(Lib SHARED Calc Render)
+add_library(Lib SHARED
+        calc.hpp
+        render.hpp
+        bar.hpp
+        )
+# インクルードディレクトリを指定
+target_include_directories(Lib
+    PUBLIC ${PROJECT_SOURCE_DIR}/lib
+)
