[create lib/libtest branch] わからんけどとりあえずコミット

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -2,6 +2,7 @@ add_library(Lib SHARED
         calc.hpp
         Game.hpp
         bar.hpp
+        MultiPlotter.hpp
         )
 # インクルードディレクトリを指定
 target_include_directories(Lib
