[create lib/libtest branch] 一応完成

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -6,4 +6,5 @@ add_library(Lib SHARED
 target_include_directories(Lib
     PUBLIC ${PROJECT_SOURCE_DIR}/lib
     PUBLIC ${PROJECT_SOURCE_DIR}/lib/classes
+    PUBLIC ${PROJECT_SOURCE_DIR}/lib/assets
 )
